collapsing articles, tags fix

--- a/sass/_medias.scss
+++ b/sass/_medias.scss
@@ -146,6 +146,7 @@
 				width: 42px;
 
 				.avatar-wrapper {
+					cursor: pointer;
 					height: 42px;
 				}
 
